# $Id$

EXTRA_DIST = \
	ACR122U.txt \
	ACR38U-CCID.txt \
	ActivCardV2.txt \
	ActivCardV3.txt \
	Alya.txt \
	ASEDrive_IIIe_KB.txt \
	ASE_IIIe.txt \
	AxaltoV3.txt \
	BludriveII.txt \
	C3PO_KBR36.txt \
	C3PO_LTC32_USBv2_old.txt \
	C3PO_LTC32_USBv2.txt \
	C3PO_TLTC2USB.txt \
	CardMan1021.txt \
	CardMan3021.txt \
	CardMan3121.txt \
	CardMan3621.txt \
	CardMan3821.txt \
	CardMan4321.txt \
	CardMan5125.txt \
	CardMan5321.txt \
	CardMan6121.txt \
	Charismathics.txt \
	CherrySmartBoardXX1X.txt \
	CherrySmartTerminalST2XXX.txt \
	CherryST1044U.txt \
	CherryXX33.txt \
	CherryXX44.txt \
	CL1356T.txt \
	CryptoIdentity.txt \
	DellSCRK.txt \
	DellSK-3106.txt \
	e-gate.txt \
	Eutron_CryptoIdentity.txt \
	Eutron_Digipass_860.txt \
	Eutron_Smart_Pocket.txt \
	FujitsuSiemens_SmartCard_Keyboard_USB_2A.txt \
	FujitsuSiemens_SmartCard_USB_2A.txt \
	GemaltoSmartEnterpriseGuardian.txt \
	GemCoreSIMPro.txt \
	Gem_e-SealPro.txt \
	GemPC433_SL.txt \
	GemPC_Express.txt \
	GemPCKey.txt \
	GemPCPinpad.txt \
	GemPCTwin.txt \
	GnD_StarSignCardToken350.txt \
	GnD_StarSignCardToken550.txt \
	HPUSBSmartCardKeyboard.txt \
	iDream.txt \
	KAAN_Advanced.txt \
	KAAN_Base.txt \
	KAAN_SIM_III.txt \
	KEBTechnology_KONA_USB_SmartCard.txt \
	Kobil_EMV_CAP.txt \
	Lenovo.txt \
	LTC31.txt \
	LTC31v2.txt \
	mIDentity.txt \
	MySmartPad.txt \
	Oz776_7772.txt \
	Oz776S.txt \
	Precise_250_MC.txt \
	ReinerSCT.txt \
	SafeNet_IKey4000.txt \
	SCR3310.txt \
	SCR3311.txt \
	SCR331-DI-NTTCom.txt \
	SCR331-DI.txt \
	SCR331.txt \
	SCR3320.txt \
	SCR333.txt \
	SCR3340.txt \
	SCR335.txt \
	SCR355.txt \
	SDI010.txt \
	sid800.txt \
	SIM_Pocket_Combo.txt \
	Sitecom_MD-010.txt \
	SPR532.txt \
	supported_readers.txt \
	Validy_TokenA.txt \
	Vasco_DP905.txt \
	Vega-Alpha.txt \
	Verisign_secure_storage_token.txt \
	Verisign_secure_token.txt \
	Winbond.txt

