sbin_PROGRAMS = Kobil_mIDentity_switch
Kobil_mIDentity_switch_SOURCES = Kobil_mIDentity_switch.c
Kobil_mIDentity_switch_CFLAGS = $(LIBUSB_CFLAGS)
Kobil_mIDentity_switch_LDADD = $(LIBUSB_LIBS)

doc_DATA = README_Kobil_mIDentity_switch.txt

man_MANS = Kobil_mIDentity_switch.8

EXTRA_DIST = $(doc_DATA) $(man_MANS)
